fix: layoutshift for landscape oriented photos in featured page

--- a/src/components/PhotoFrames/simpleWithFrame.css
+++ b/src/components/PhotoFrames/simpleWithFrame.css
@@ -48,11 +48,15 @@
     .simple-with-frame__photo-wrapper__image {
         max-width: 100%;
         max-height: 100%;
-        /*border: 1vw solid var(--theme-color);*/
         box-sizing: border-box;
         object-fit: contain;
 
         cursor: pointer;
+
+        &.progressive-img--loading {
+            min-height: 50dvh;
+            width: auto;
+        }
     }
 
     .simple-with-frame__photo-wrapper__caption {
